--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -30,7 +30,7 @@
 -
   level_customization: 1
   level: customization
-  logo: http://pyconcn.qiniudn.com/zoomquiet/stuff15/logo/liepin.png?imageView2/2/w/210
+  logo: http://pyconcn.qiniudn.com/zoomquiet/stuff15/logo/liepin.png?imageView2/2/w/260
   link: http://www.liepin.com/
   intro: "猎聘网（www.liepin.com），隶属于万仕道（北京）管理咨询有限公司，于2011年正式上线，是国内唯一真正实现企业、猎头和职业经理人三方互动的职业发展平台。猎聘网始终专注于打造以经理人个人用户体验为核心的职业发展平台，全面颠覆传统网络招聘以企业为核心的广告发布平台。截至2015年6月，猎聘网拥有超过2000万的注册会员，已服务超过39万家优质企业。目前，有超过20万名猎头在猎聘网平台上寻找核心岗位的候选人。猎聘网的业务遍及中国北京、上海、广州、深圳、天津、大连、杭州、南京、武汉、厦门、成都、青岛、重庆、郑州等十余个城市。 "
 
@@ -40,14 +40,14 @@
 -
   level_diamond: 1
   level: diamond
-  logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/jiankongbao-logo.png?imageView2/2/w/210
+  logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/jiankongbao-logo.png?imageView2/2/w/240
   link: http://www.jiankongbao.com/
   intro: "云智慧(北京)科技有限公司成立于2009年,是国内领先的应用性能管理服务商. 基于大数据分析,为企业级用户提供全面,专业的端到端的应用性能管理(End To End Application Performance Management)解决方案. Cloudwise SaaS APM累计已为电子商务,移动互联网,IaaS云服务,在线游戏,教育医疗等行业的几十万用户提供了前瞻性的智慧性能管理服务,是新一代应用性能管理(APM)的领导者. "
   intro_en: "CloudSmart (Beijing)  technology co., LTD founded in 2009 ,that is a leading domestic application performance management service providers. Based on big data analysis, for enterprise users to provide the solution of End To End Application Performance Management comprehensive. For electronic commerce, mobile Internet, cloud IaaS service, online game, education and  the medical industry users provided a forward-looking & wisdom application performance management" 
 -
   level_diamond: 1
   level: diamond
-  logo: http://pyconcn.qiniudn.com/zoomquiet/stuff15/logo/ouyeel_logo.jpg?imageView2/2/w/200
+  logo: http://pyconcn.qiniudn.com/zoomquiet/stuff15/logo/ouyeel_logo.jpg?imageView2/2/w/240
   link: http://ouyeel.com/help/about-us.html
   intro: "上海钢铁交易中心（SHGT.com）是隶属于欧冶云商旗下的钢铁B2B电商平台。作为“互联网+钢铁”的先驱者，致力于为上下游企业提供交易、物流、加工、金融、技术、信息等全流程一站式服务，创造超越期望的价值体验。经过两年多的发展，客户数已经超过8.５万家 ，交易量超过1，060万吨 ，结算金额超过3００亿元 ，以其高度智能化的系统、专业可靠的服务走在了同行前列，目标在3年内成为全球第一的钢铁电商网站。智慧平台，让钢铁交易更简单。"
   intro_en: "Shanghai Steel Trading Centre (SHGT.com) is a B2B steel e-business platform invested by Baosteel Group in 2013. As a leading company, we provide one-stop service including consulting, transaction, finance, metallic processing, logistics and so forth. During the past year, we created more than 85,000 registered platform memberships. The annual business volume online is over 10.6 million tons; revenue is around 5 billion USD.With our Intelligent Platform, you will have Simpler Business. OUYEEL!" 
@@ -58,21 +58,21 @@
 -
   level_platinum: 1
   level: platinum
-  logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff15/logo/facebook_2015_logo_detail.png?imageView2/2/h/90
+  logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff15/logo/facebook_2015_logo_detail.png?imageView2/2/h/80
   link: https://www.facebook.com/
   intro: "公司成立于2004年，Facebook的使命是让人们更加愿意分享，并让世界更加开放和连接。人们使用Facebook保持联系与朋友和家人，共同探索世界，并分享和表达任何事物。"
   intro_en: "Founded in 2004, Facebook’s mission is to give people the power to share and make the world more open and connected. People use Facebook to stay connected with friends and family, to discover what’s going on in the world, and to share and express what matters to them."
 -
   level_platinum: 1
   level: platinum
-  logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff15/logo/GizWits_logo_y.png?imageView2/2/h/90
+  logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff15/logo/GizWits_logo_y.png?imageView2/2/h/80
   link: http://www.gizwits.com/
   intro: "机智云（GizWits）是国内第一个智能硬件自助开发和云服务平台, 为开发者提供快捷的智能硬件开发工具，为智能硬件厂家提供一站式物联网开发和运维服务，目前服务的客户来自消费类智能硬件厂家（含智能家居、智能硬件、可穿戴产品）、工业及商业应用客户、智慧城市建设及创新创业支持等，至2015年机智云平台受到全球超过300家客户信赖，平台激活智能硬件设备全球出货总量超过 300 万台，是目前国内外最大的智能硬件集群之一。"
   intro_en: "... "
 -
   level_platinum: 1
   level: platinum
-  logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff15/logo/SpeedyCloud-logo.png?imageView2/2/h/90
+  logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff15/logo/SpeedyCloud-logo.png?imageView2/2/h/80
   link: http://www.speedycloud.cn/
   intro: "SpeedyCloud是业界领先的云计算服务提供商迅达云成公司旗下品牌,专注于为企业提供互联网及企业IT相关基础设施云服务. 公司成员绝大多数来自于蓝汛,世纪互联等IT运维服务型上市企业, 利用最新的云计算及互联网技术帮助客户迅速扩展在线业务."
   intro_en: "SpeedyCloud is the IaaS brand owned by Beijing SpeedyCloud Technology Co., Ltd.,, who is one of the leaders in cloud industry.The company was setup in 2012, with the capital of 10 million RMB invested all by ourselves.Being the general solution provider,  our focus is to provide IaaS for Internet and enterprises companies. Most of the team came from public IT operating and service companies like ChinaCache, 21ViaNet, etc. We are helping our customers with the most cutting-edge cloud computing technologies to expand their online businesses. "
@@ -86,7 +86,7 @@
 -
   level_platinum: 1
   level: platinum
-  logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/qiniu-logo.png?imageView2/2/w/200
+  logo: http://pyconcn.qiniudn.com/zoomquiet/stuff14/logo/qiniu-logo.png?imageView2/2/h/80
   link: http://www.qiniu.com/
   intro: "七牛云存储由国内存储行业的领军人物之一许式伟于2011年创立,致力于提供最适合开发者的数据在线托管,传输加速以及云端处理的服务."
   intro_en: "qiniu cloud storage by domestic industry one of the leading Xu Shiwei was founded in 2011, Committed to providing the most suitable for developers of online hosting, transmission speed, and the cloud data processing services."
@@ -118,14 +118,14 @@
 -
   level_gold: 1
   level: gold
-  logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff15/logo/alicloud.png?imageView2/2/h/62
+  logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff15/logo/alicloud.png?imageView2/2/h/60
   link: http://www.aliyun.com/
   intro: "阿里云致力于打造公共、开放的云计算服务平台。我们将借助技术的创新，不断提升计算能力与规模效益，将云计算变成真正意义上的公共服务。与此同时，我们将通过aliyun.com，用互联网的方式使得大家可以便捷的按需获取阿里云的云计算产品与服务。"
   intro_en: "Aliyun, the cloud computing business of Alibaba Group Holding Limited was established in September 2009. It develops highly scalable platforms for cloud computing and data management and provides a comprehensive suite of cloud computing services to support the participants of Alibaba Group's online and mobile commerce ecosystem, including sellers, and other third-party customers and businesses. "
 -
   level_gold: 1
   level: gold
-  logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff14/logo/coding_logo.png?imageView2/2/h/62
+  logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff14/logo/coding_logo.png?imageView2/2/w/180
   link: https://coding.net/home.html
   intro: "Coding 是一个软件开发平台--- 提供快速的软件开发环境,包括 Web IDE,代码托管,项目协作,部署演示等,同时还有Coding 悬赏平台,帮助软件项目的需求方快速找到合适的开发者完成项目开发工作,也帮助开发者能够找到合适的项目将自己的能力变成财富."
   intro_en: "Coding is a cloud development platform for developers, Provide code hosting, space operation, quality control, project management, etc., Coding provide social collaboration capabilities, including the SNS to provide developers with technical discussion and collaboration platform."
@@ -140,7 +140,7 @@
 -
   level_gold: 1
   level: gold
-  logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff15/logo/hzbook-word-logo_h.png?imageView2/2/h/90
+  logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff15/logo/hzbook-word-logo_h.png?imageView2/2/w/180
   link: http://www.hzbook.com/About/About.html
   intro: " 北京华章图文信息有限公司是机械工业出版社与(美国)万国图文信息有限公司共同投资建立的合资企业,主要从事科技,经管,外语领域的图书出版服务业务,公司成立于1995年10月. '国际视野,教育为本,专业出版'是我们发展的重要指导思想,全球采集内容,服务中国教育,成为华章的鲜明特色. 公司出版的图书代表着计算机,经济管理,文化和英语教学领域的最新视野,能最好地满足专业人士,教师和学生不断变化的需求. '与您携手,共奏华章',华章人以澎湃的激情,崭新的视角,伴您走向成功!"
   intro_en: "HZ Book is a joint venture set up with China Machine Press and (US)WanGuo."
@@ -151,7 +151,7 @@
 -
   level_silver: 1
   level: silver
-  logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff15/logo/uc_logo.png?imageView2/2/w/120
+  logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff15/logo/uc_logo.png?imageView2/2/w/140
   link: http://uc.cn
   intro: "阿里巴巴移动事业群，以移动互联网领军企业UC优视为基础，整合阿里巴巴集团相关优势资源组建, 旗下拥有UC浏览器、神马搜索、九游、阿里文学、PP助手等多个行业领先的移动互联网产品及平台，为用户提供多领域、全方位的移动互联网服务。阿里移动事业群专注移动互联网业务创新，致力于打造简单，可信赖的移动互联网信息服务平台，用技术和数据创造变量。"
   intro_en: "Ganguo Mobile is the most well-known development team in Pearl River Delta. With years of experience in mobile application and web development; our specialists offer cost-effective mobile solution and maintenance program. The integration of our experience; creativity and vision has helped us to deliver concrete product with great satisfaction to our clients.  Our main business are mobile app development (iOS / Android); development and implementation of Wechat services account; big data analysis and other mobile related territory. We have been working with leading brands in information technology/ automobile/ consumer product/ real estate/ Internet/ finance/ and entertainment business."
@@ -194,19 +194,19 @@
 -
   level_bronze: 1
   level: bronze
-  logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff15/logo/qichang_w2048.png?imageView2/2/w/120
+  logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff15/logo/qichang_w2048.png?imageView2/2/w/100
   link: http://gzqichang.com
   intro: "广州齐昌网络科技有限公司,专注于技术咨询和开发外包业务,承接基于Web技术的开发业务外包,包括基于浏览器/服务器模式的应用软件,电子商务和电子政务系统研发,承接基于iOS,Android的软件开发业务外包,承接基于 Linux的系统软件开发外包. 齐昌网络由赖勇浩于2014年底创办,赖勇浩也是多届的PyCon分享讲师,在Python相关技术上有深入研究,除技术博客有近250万浏览量外还合著有<<编写高质量代码:改善Python程序的91个建议>>一书. "
 -
   level_bronze: 1
   level: bronze
-  logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff15/logo/easydo_logo.png?imageView2/2/w/60
+  logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff15/logo/easydo_logo.png?imageView2/2/w/80
   link: http://easydo.cn
   intro: "易开发，是一家为开发者提供企业应用快速开发平台的公司。目前专注于微信企业号的快速（无码）定制开发方案。在当前互联网+浪潮中，我们帮助企业多快好省地迈向互联网化和信息化。我们在丰厚企业信息化基础设施之上，提供了创新的、人性化开发工具，极大地降低开发者门槛，提升开发效率，降低了项目开发和维护成本。"
 -
   level_bronze: 1
   level: bronze
-  logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff15/logo/gitcafe_logo.png?imageView2/2/w/60
+  logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff15/logo/gitcafe_logo.png?imageView2/2/w/100
   link: https://gitcafe.com/
   intro: "GitCafe是一个基于代码托管服务打造的技术协作与分享平台，程序开发爱好者们可以通过使用代码版本控制系统Git来将他们所写的开源或商业项目的代码托管在GitCafe上，与其他程序员针对这些项目在线协作开发。两天前，GitCafe结束了长达数月的Alpha封闭测试，发布了第一个Beta版本，现无需邀请码，所有人都能够开始注册使用GitCafe所提供的代码托管服务 。"
   intro_en: "D.G.Z was founded by Thomas Yao at the end of 2012 in Shanghai, China. Our mission is to improve the Information Technology education ecosystem around the world.We are building two bridges to connect people, one is from college and middle school students to real world projects, the other one is from China to western countries and vice versa."
