appended seasun as silver

--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -186,6 +186,13 @@
   intro: "叮当Dingdone是一款移动应用自助生产运营平台，主要支持大众用户通过“叮当”来DIY开发APP，仅需分分钟，即可一键打包并同时生成适配于iOS、Android系统的Native原生应用程序和H5网页。与市场上基于HTML5打包的Web APP制作工具不同，依托于云技术的叮当提出了原生应用仓库的概念，通过丰富的风格、列表、功能模板以及强大且细粒度的属性参数，支撑APP的表现定义和样式变化。同时，它还能够为开发者提供H5 SDK和API，让用户可以嵌入不同数据和内容，十分便捷。“叮当”有别于简单粗暴的复制模式，已具备相当完善的设备功能和交互体验，用户可最大化发挥自定义空间，在云平台上创建、管理及生成一款别具一格的原生应用程序。利用“叮当”，即使是不懂编程和设计知识的普通人也能够信手拈来， APP制作者只需要通过“搭积木”的方式即可完成跨平台原生应用开发。"
 
 
+-
+  level_silver: 1
+  level: silver
+  logo: http://pyconcn.qiniucdn.com/zoomquiet/stuff15/logo/seasun.png?imageView2/2/w/120
+  link: http://www.xishanju.com/
+  intro: '创建1995年初夏，在美丽的海滨小城珠海，西山居工作室孕育而生，一群西山居居士们十年如一日尅勊业业的奋斗。"创造快乐，传递快乐！"一直是西山居居士们的创作宗旨。西山居一领先的技术作为坚实的基础以独特的本土化产品为玩家提供时尚化服务。在未来，西山居仍以娱乐软件为主导产品,不断进行研发和市场活动，逐步发展成为国内最优秀的集制作、发行于一体的数字化互动娱乐公司。'
+
 
 #########################################
 #   青铜级
