fix fb name Rosie Li

--- a/src/data/_speakers.yaml
+++ b/src/data/_speakers.yaml
@@ -757,7 +757,7 @@ id_meituan:
     slide: #
 
 id_fb_rosieli:
-  name: Roise Li (李若思)
+  name: Rosie Li (李若思)
   city_beijing: 1
   city: 北京
   city_en: Beijing
