--- a/src/data/_donators.yaml
+++ b/src/data/_donators.yaml
@@ -23,3 +23,17 @@
 - 斌雷
 - 李明东
 - halfcrazy
+- lastmayday
+- mozillazg
+- 小勇紫夜
+- 李落
+- Qing
+- 代少飞
+- 小罗哥
+- FrankXu
+- Kimi Nomaka
+- 太阳大人
+- SkyLothar
+- 黄福江
+- lx
+- 夏忠武（Xia Wood)
