--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -57,7 +57,7 @@
   logo: http://pyconcn.qiniudn.com/zoomquiet/stuff15/logo/ouyeel_logo.jpg?imageView2/2/w/240
   link: http://ouyeel.com/help/about-us.html
   intro: "上海钢铁交易中心（SHGT.com）是隶属于欧冶云商旗下的钢铁B2B电商平台。作为“互联网+钢铁”的先驱者，致力于为上下游企业提供交易、物流、加工、金融、技术、信息等全流程一站式服务，创造超越期望的价值体验。经过两年多的发展，客户数已经超过8.５万家 ，交易量超过1，060万吨 ，结算金额超过3００亿元 ，以其高度智能化的系统、专业可靠的服务走在了同行前列，目标在3年内成为全球第一的钢铁电商网站。智慧平台，让钢铁交易更简单。"
-  intro_en: "Shanghai Steel Trading Centre (SHGT.com) is a B2B steel e-business platform invested by Baosteel Group in 2013. As a leading company, we provide one-stop service including consulting, transaction, finance, metallic processing, logistics and so forth. During the past year, we created more than 85,000 registered platform memberships. The annual business volume online is over 10.6 million tons; revenue is around 5 billion USD.With our Intelligent Platform, you will have Simpler Business. OUYEEL!" 
+  intro_en: "Shanghai Steel Trading Centre (SHGT.com) is a B2B steel e-business platform invested by Baosteel Group in 2013. As a leading company, we provide one-stop service including consulting, transaction, finance, metallic processing, logistics and so forth.During the past year, we created more than 85,000 registered platform memberships. The annual business volume online is over 10.6 million tons; revenue is around 5 billion USD.With our Intelligent Platform, you will have Simpler Business. OUYEEL!" 
 
 #########################################
 #   白金级
@@ -115,6 +115,14 @@
 #########################################
 #   黄金级
 #########################################
+
+-
+  level_gold: 1
+  level: gold
+  logo: http://pyconcn.qiniudn.com/zoomquiet/stuff15/logo/ucloud.png?imageView2/2/w/180
+  link: http://www.douban.com/
+  intro: "上海优刻得信息科技有限公司（UCloud）是国内领先的云计算服务提供商，创立于2012年3月。依托全球10个数据中心以及全国11地线下服务站，UCloud已为超过3万家企业级客户提供服务，间接服务用户数量超过6亿，除了提供行业领先的云计算技术和服务，UCloud通过自主建立孵化器、整合互联网行业资源、设立投资基金，帮助中小企业解决初创时期面临的各种问题，降低创业风险，打造互联网行业健康、稳定、创新的创业生态圈。目前，UCloud的数据中心服务已覆盖全球，是国内首批在境外建立数据中的云计算公司。"
+  intro_en: "UCloud is one of the leading IaaS(Infrastructure as a Service) providers in China. By independent research and development, we provide a range of innovative products including high I/O performance host, key-value memory database, SDN and hybrid-cloud. Now, tens of thousands of enterprises and startups in mobile games, online education, apps, PaaS(Platform as a Service), SaaS(Software as a Service) and some other areas operate on UCloud platform. UCloud innovates according to users’ demand and integrates the best resources of strategic partners in ecosystem."
 -
   level_gold: 1
   level: gold
