update 刘国强（Bruce Liu）云智慧

--- a/src/data/_speakers.yaml
+++ b/src/data/_speakers.yaml
@@ -190,7 +190,7 @@ id_jiankongbaosh:
   city_shanghai: 1
   city: 上海
   city_en: Shanghai
-  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff14/cpug-logo-188x188.png?imageView2/2/h/80
+  avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff15/id/jiankongbao_liu.jpg?imageView2/2/h/80
   intro: 云智慧技术中心(Technical Center)副总裁，全面负责公司的售前、售后、技术咨询和培训方面的工作。在加入云智慧之前，他拥有超过18年的IT行业研发，IT管理，服务器和桌面虚拟架构，数据库和云计算专家，企业级方案专家。历任CA大中华区CTO，售前技术总监。Citrix中国区首席专家顾问，虚拟化系统工程师。在银行，电信，邮政和政府行业服务多年，是资深的行业IT、云计算和应用性能解决方案专家。
   intro_en: Pythoneer...
   topic:
