--- a/src/data/_agenda.yaml
+++ b/src/data/_agenda.yaml
@@ -40,9 +40,10 @@ shanghai:
       topic: 茶歇
       topic_en: Intermission
     - { time: "15:40", speaker: id_wangliqi }
-    - { time: "16:10", speaker: id_xuzhou }
+    - { time: "16:10", speaker: id_ouyeel_sh }
     - { time: "16:45", speaker: id_shell909090 }
-    - { time: "17:15", speaker: id_xiaokai }
+    - { time: "17:00", speaker: id_xuzhou }
+    - { time: "17:20", speaker: id_xiaokai }
   lightening_talks:
     - { time: "17:30", speaker: id_derek }
     - { time: "17:40", speaker: id_chendawei }
