--- a/src/data/_speakers.yaml
+++ b/src/data/_speakers.yaml
@@ -133,7 +133,7 @@ id_chenhaibo:
         GUI赋予的想象力
         如何开始你的第一个桌面软件？
     preview_en: ...
-    slide: #
+    slide: http://7bv7nx.com1.z0.glb.clouddn.com/Pycon-2015-Hepo.key
 
 id_xiaokai:
   name: 肖凯
