fixed info. for Zhili Wang

--- a/src/data/_speakers.yaml
+++ b/src/data/_speakers.yaml
@@ -531,7 +531,7 @@ id_ZhiliWang:
   city: 北京
   city_en: Beijing
   avatar: http://pyconcn.qiniudn.com/zoomquiet/stuff15/id/id_ZhiliWang.jpg?imageView2/2/h/80
-  intro:  刚入行的python 爱好者，爱运行，哎新奇事物，现在比较蓝海讯通公司任python支持。
+  intro:  Python 粉，爱运动，爱新奇事物，就职 OneAPM（北京蓝海讯通公司），Python 应用性能分析师。
   intro_en: A newbie in Python...
   topic:
     title: "如何提高研发效率"
