--- a/src/data/_sponsors.yaml
+++ b/src/data/_sponsors.yaml
@@ -168,6 +168,14 @@
   intro: "又拍云存储是杭州又拍云科技有限公司旗下项目,成立于2005年6月,前期主要为又拍网,又拍图片管家提供图片云存储／云计算服务,于2010年2月对所有用户开放使用."
   intro_en: "upyun cloud storage is hangzhou youpai technology co., LTD's project, was founded in June 2005, the early main take yupoo.com, and v.yupoo.com , in February 2010 is open to all users to use."
 
+-
+  level_gold: 1
+  level: gold
+  logo: http://pyconcn.qiniudn.com/zoomquiet/stuff15/logo/uqerio.png?imageView2/2/w/160
+  link: http://uqer.io
+  intro: "您的私人金融量化分析的平台，是通联数据旗下的量化分析研究平台。我们旨在打破金融量化的壁垒，为广大量化爱好者提供华尔街专业量化机构的装备。通过提供高质量的海量金融数据与高性能的分析工具，共襄智慧与金融在大数据时代的红利。"
+
+
 #########################################
 #   白银级
 #########################################
