appended all bj agenda

--- a/src/data/_agenda.yaml
+++ b/src/data/_agenda.yaml
@@ -131,36 +131,41 @@ beijing:
   date: 2015-09-19 09:00~18:00
   notices: ""
   morning:
-    - time: "09:00"
-      topic: "签到 & 开场"
+    - time: "08:30"
+      topic: "签到"
       topic_en: "Check-in"
-    - time: "09:15"
-      topic: "开场"
+    - time: "09:00"
+      topic: "开场 Guido"
       topic_en: "Opening"
-    - { time: "09:30", speaker: id_yankaibj }
-    - { time: "10:00", speaker: id_wuke }
-    - { time: "10:20", speaker: id_meituan }
-    - { time: "11:00", speaker: id_liepin2bj }
-    - { time: "11:30", speaker: id_dinglaiqiang }
+    - { time: "09:10", speaker: id_yankaibj }
+    - { time: "09:35", speaker: id_wuke }
+    - { time: "09:55", speaker: id_meituan }
+    - time: "10:30"
+      topic: 茶歇·抽奖  
+      topic_en: Intermission
+    - { time: "10:40", speaker: id_liepin2bj }
+    - { time: "11:00", speaker: id_dinglaiqiang }
+    - { time: "11:30", speaker: id_xiutao }
     - { time: "12:00", speaker: id_fb_rosieli }
   noon:
     - time: "12:10"
-      topic: 午餐+合照
+      topic: 午餐 · 合照 · 交流 · 短片 
       topic_en: Lunch + Photo
   afternoon:
-    - { time: "13:30", speaker: id_liepin1bj }
-    - { time: "14:00", speaker: id_Bouriez }
-    - { time: "14:30", speaker: id_zhengk }
-    - { time: "15:00", speaker: id_liaoxinxi }
-    - time: "15:30"
-      topic: 茶歇 
+    - { time: "13:00", speaker: id_liepin1bj }
+    - { time: "13:30", speaker: id_Bouriez }
+    - { time: "14:00", speaker: id_zhengk }
+    - { time: "14:30", speaker: id_liaoxinxi }
+    - time: "15:00"
+      topic: 茶歇·抽奖
       topic_en: Intermission
-    - { time: "15:40", speaker: id_liuchang }
-    - { time: "16:10", speaker: id_linpan }
-    - { time: "16:40", speaker: id_xiutao }
-    - { time: "17:20", speaker: id_ZhiliWang }
+    - { time: "15:10", speaker: id_liuchang }
+    - { time: "15:40", speaker: id_linpan }
+    - { time: "16:10", speaker: id_SpeedyCloud }
+    - { time: "16:40", speaker: id_dinglaiqiang2bj }
   lightening_talks:
-    - { time: "17:30", speaker: id_chifeng }
+    - { time: "17:10", speaker: id_ZhiliWang }
+    - { time: "17:20", speaker: id_chifeng }
     - { time: "17:40", speaker: id_zhongww }
     - { time: "17:45", speaker: id_yuzhanyong }
     - { time: "17:50", speaker: id_huangjin }
